--- a/package.json
+++ b/package.json
@@ -1,5 +1,44 @@
 {
-  "name": "SamCloud",
+  "name": "samcloud",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2"
+  },
+  "engines": {
+    "node": "12.5.0",
+    "npm": "6.9.0"
+  },
+  "scripts": {
+    "postinstall": "webpack",
+    "webpack": "webpack --watch --mode=development"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SamuelSacco/SamCloud.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/SamuelSacco/SamCloud/issues"
+  },
+  "homepage": "https://github.com/SamuelSacco/SamCloud#readme"
 }
