--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "use-file-picker": "^1.3.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
   },
