--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "use-file-picker": "^1.3.0",
+    "wavesurfer.js": "^5.1.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
   },
