--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "audio-waveform": "^1.3.0",
     "babel-loader": "^8.2.2",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
@@ -20,6 +21,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "use-file-picker": "^1.3.0",
+    "wavesurfer-peakbuilder": "^1.0.3",
     "wavesurfer.js": "^5.1.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
